--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,8 +3,8 @@
 # Table name: posts
 #
 #  id         :bigint           not null, primary key
-#  title      :string
-#  body       :text
+#  title      :string           not null
+#  body       :text             not null
 #  author_id  :bigint           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
